--- a/development/rails_4xx/Gemfile
+++ b/development/rails_4xx/Gemfile
@@ -1,70 +1,71 @@
 source 'https://rubygems.org'
 
 
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.2.3'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
-# Use SCSS for stylesheets
-gem 'sass-rails', '~> 5.0'
-#bootstrap
-gem 'bootstrap-sass'
-gem 'sprockets-rails', :require => 'sprockets/railtie'
-# Use Uglifier as compressor for JavaScript assets
+gem 'rails', '4.2.4'
+gem 'mysql2', '~> 0.3.18'
+gem 'bootstrap-sass', '~> 3.3.5'
+gem 'sass-rails', '>= 3.2'
+gem 'twitter-bootstrap-rails'
 gem 'uglifier', '>= 1.3.0'
-# Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.1.0'
-# See https://github.com/rails/execjs#readme for more supported runtimes
-# gem 'therubyracer', platforms: :ruby
-
-# Use jquery as the JavaScript library
 gem 'jquery-rails'
-# Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
+gem 'simple_form'
+gem 'cocoon'
+gem "breadcrumbs_on_rails"
+gem 'enumerize'
+
+# Cancancan
+gem 'cancancan', '~> 1.10'
+
+
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
+
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
+# sorcery
+gem 'sorcery'
+gem 'validates_email_format_of'
 
-# Use Unicorn as the app server
-# gem 'unicorn'
+# for statistics
+gem 'time_difference'
 
-# Use Capistrano for deployment
-# gem 'capistrano-rails', group: :development
 
 group :development, :test do
-  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug'
-  #Rspec
-  gem 'rspec'
-  gem 'rspec-rails'
-  gem 'rspec-its'
-  #Guard features
-  gem 'guard'
-  gem 'listen'
-  gem "rack-livereload"  
-  gem 'guard-livereload'  
-  gem 'rb-fsevent',  :require => false
-  gem 'childprocess'
+	gem 'byebug'
+	gem 'pry-byebug'
+	gem 'rspec'
+	gem 'rspec-rails'
+	gem 'spring-commands-rspec'
+	#guard & Co
+	gem 'guard-rspec'
+	gem 'guard'
+	gem 'guard-livereload'
+	gem 'rack-livereload'
+	gem 'listen'
+	gem 'rb-fsevent',  :require => false
+	gem 'childprocess'
+	#faker
+	gem 'faker'
+	gem "factory_girl_rails"
 
+end
+group :test do
+	gem 'capybara'
+	gem 'shoulda-matchers', '~> 3.0'
+	gem 'selenium-webdriver'
+	gem 'libnotify'
+	gem 'database_cleaner'
 
-
+end
+group :development do
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
-  gem 'spring-commands-rspec'
 end
 
-group :test do
-  gem 'capybara'
-  gem 'selenium-webdriver'
-  gem 'libnotify'
-  gem 'factory_girl_rails'
-  gem 'cucumber-rails', :require => false
-  # database_cleaner is not required, but highly recommended
-  gem 'database_cleaner'
-end
